# pantryman-linux

./: AI.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  TODO.md  dev.sh
example/data/: pantry.yaml
example/data/ingredients/: Nutella.yaml  butter.yaml  egg.yaml  flour.yaml  milk.yaml  pepper.yaml  potato.yaml  salt.yaml  tomato.yaml  yoghurt.yaml
example/data/recipes/: Lasagna.md  Spaghetti_Aglio_e_Olio.md
src/: app.rs  config.rs  dialogs.rs  i18n.rs  kb.rs  lib.rs  main.rs  settings.rs  ui_constants.rs  utils.rs
src/pantry/: mod.rs
src/recipes/: mod.rs
tests/: app_tests.rs  dialogs_tests.rs  i18n_tests.rs  kb_tests.rs  pantry_tests.rs  recipes_tests.rs  settings_tests.rs  sidebar_tests.rs  tabs_tests.rs  types_tests.rs  ui_constants_tests.rs  ui_integration_tests.rs  user_settings_tests.rs  utils_tests.rs
